--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amora Gifts - Curate Moments, Gift Memories</title>
+    <title>Tashya Gifts - Curate Moments, Gift Memories</title>
     <meta name="description" content="Premium gift hampers for every occasion. Thoughtfully crafted and beautifully presented." />
-    <meta name="author" content="Amora Gifts" />
+    <meta name="author" content="Tashya Gifts" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Amora Gifts - Premium Gift Hampers" />
+    <meta property="og:title" content="Tashya Gifts - Premium Gift Hampers" />
     <meta property="og:description" content="Curate Moments, Gift Memories. Handcrafted hampers for every celebration." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
